# FancyTabBar

./: .gitignore  CMakeLists.txt  FancyTabBar.pro  README.md  demowindow.cpp  demowindow.h  fancytab.h  fancytabbar.cpp  fancytabbar.h  main.cpp  main2.cpp
